--- a/.eslintrc
+++ b/.eslintrc
@@ -1,18 +1,21 @@
 {
     "env": {
-        "es6": true,
+        "es2022": true,
         "browser": true,
         "node": true
     },
     "extends": "eslint:recommended",
     "parserOptions": {
-        "ecmaVersion": 2019,
+        "ecmaVersion": "latest",
         "sourceType": "module"
     },
     "rules": {
         "indent": [
             "error",
-            4
+            4,
+            {
+                "SwitchCase": 1
+            }
         ],
         "linebreak-style": [
             "error",
